--- a/src/layout/index.css
+++ b/src/layout/index.css
@@ -11,6 +11,8 @@ body {
   padding: 0;
   min-height: 100%;
   min-width: 100%;
+  background-color: #1E1D1E;
+  color: rgb(223, 212, 212);
 }
 
 #___gatsby #gatsby-focus-wrapper {
