--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -46,6 +46,13 @@ body {
     max-width: 1200px;
   }
 }
+a {
+  text-decoration: none;
+  color: white;
+  &:hover {
+    color: var(--color-primary);
+  }
+}
 
 h1,
 h2,
