--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,51 +1,93 @@
 ---
-interface Props {
-	title: string;
+import { LOCALE, SITE } from "@/config";
+import { ViewTransitions } from "astro:transitions";
+import "@/styles/base.css";
+export interface Props {
+	title?: string;
+	author?: string;
+	description?: string;
+	ogImage?: string;
+	canonicalURL?: string;
+	pubDatetime?: Date;
+	modDatetime?: Date | null;
+	scrollSmooth?: boolean;
 }
 
-const { title } = Astro.props;
+const {
+	title = SITE.title,
+	author = SITE.author,
+	description = SITE.desc,
+	ogImage = SITE.ogImage,
+	canonicalURL = "",
+	pubDatetime,
+	modDatetime,
+	scrollSmooth = false,
+} = Astro.props;
+
+// const socialImageURL = new URL(
+// 	ogImage ?? SITE.ogImage ?? "og.png",
+// 	Astro.url.origin
+// ).href;
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Private Homepage von Andreas Adam mit Rezepten, Fotos und kreativen Experimenten">
+		<link rel="shortcut icon" href="/favicon.ico">
+		<link rel="icon" href="/static/icons/favicon-32x32.png" sizes="32x32">
+		<link rel="icon" href="/static/icons/favicon-16x16.png" sizes="16x16">
+		<link rel="apple-touch-icon" href="/static/icons/apple-touch-icon.png" sizes="180x180">
+		<link rel="canonical" href={canonicalURL} />
 		<meta name="generator" content={Astro.generator} />
+
+		<!-- General Meta Tags -->
 		<title>{title}</title>
+		<meta name="title" content={title} />
+		<meta name="description" content={description} />
+		<meta name="author" content={author} />
+		<link rel="sitemap" href="/sitemap-index.xml" />
+		<!-- Open Graph / Facebook -->
+		<meta property="og:title" content={title} />
+		<meta property="og:description" content={description} />
+		<meta property="og:url" content={canonicalURL} />
+		<!-- <meta property="og:image" content={socialImageURL} /> -->
+
+		<!-- Article Published/Modified time -->
+		{
+			pubDatetime && (
+				<meta
+					property="article:published_time"
+					content={pubDatetime.toISOString()}
+				/>
+			)
+		}
+		{
+			modDatetime && (
+				<meta
+					property="article:modified_time"
+					content={modDatetime.toISOString()}
+				/>
+			)
+		}
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content={canonicalURL} />
+		<meta property="twitter:title" content={title} />
+		<meta property="twitter:description" content={description} />
+		<!-- <meta property="twitter:image" content={socialImageURL} /> -->
+
+		<!-- Google Font -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+		<ViewTransitions />
+
+		<script is:inline src="/toggle-theme.js"></script>
 	</head>
 	<body>
 		<slot />
 	</body>
 </html>
-<style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
-</style>
