--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,7 +31,7 @@ const {
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" class="grid min-h-full">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -84,10 +84,11 @@ const {
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 		<ViewTransitions />
+		<script src="https://cdn.jsdelivr.net/npm/@mux/mux-player"></script>
 
 		<script is:inline src="/toggle-theme.js"></script>
 	</head>
-	<body>
+	<body class="bg-slate-900 grid bg-[url('/bg/dark-scratches.jpg')] bg-repeat bg-blend-darken text-slate-300">
 		<slot />
 	</body>
 </html>
