--- a/src/layouts/EventLayout.astro
+++ b/src/layouts/EventLayout.astro
@@ -4,33 +4,31 @@ import type { CollectionEntry } from 'astro:content';
 import FormattedDate from '../components/FormattedDate.astro';
 import Layout from './Layout.astro';
 
-type Props = CollectionEntry<'recipes'>['data'];
+type Props = CollectionEntry<'events'>['data'];
 
-const { title, summary, datePublished, dateModified, image } = Astro.props;
+const { videos, title, date, slug, body } = Astro.props;
 ---
 
-<Layout title={title} description={summary}>
+<Layout title={title}>
 	<main class="grid md:grid-cols-[1fr_60rem_1fr]">
-			<article class="prose container">
-				<div class="hero-image">
-					{image && !!image.length && <img width={1020} height={510} src={image[0]} alt="" />}
-				</div>
-				<div class="prose">
-					<div class="title">
+			<article class="flex flex-col space-y-4 w-full content-container">
+					<div class="prose ">
 						<div class="date">
-							<FormattedDate date={datePublished} />
-							{
-								dateModified && (
-									<div class="last-updated-on">
-										Last updated on <FormattedDate date={dateModified} />
-									</div>
-								)
-							}
+							{!!date && <FormattedDate date={date} />}
+
 						</div>
 						<h1>{title}</h1>
-						<hr />
 					</div>
-					<slot />
+					{!!videos && videos.length > 0 && videos[0].src && <mux-player
+					className="w-full"
+					id={title}
+					playback-id={videos[0].src}
+					metadata-video-title="Placeholder (optional)"
+					metadata-viewer-user-id="Placeholder (optional)"
+					accent-color="#FF0000"
+				></mux-player>}
+				<div class="prose">
+				<slot/>
 				</div>
 			</article>
 		</main>
