--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,8 @@
 import { LOCALE, SITE } from "@/config";
 import { ViewTransitions } from "astro:transitions";
 import "@/styles/base.css";
+import Header from "@/components/Header.astro";
+import Footer from "@/components/Footer.astro";
 export interface Props {
 	title?: string;
 	author?: string;
@@ -88,7 +90,9 @@ const {
 
 		<script is:inline src="/toggle-theme.js"></script>
 	</head>
-	<body class="bg-slate-900 grid bg-[url('/bg/dark-scratches.jpg')] bg-repeat bg-blend-darken text-slate-300">
+	<body class="bg-slate-900 bg-[url('/bg/dark-scratches.jpg')] bg-repeat bg-blend-darken text-slate-300 min-h-screen flex flex-col">
+		<Header />
 		<slot />
+		<Footer />
 	</body>
 </html>
